<resources>
    <!--Get Started Page -->
    <string name="app_name">tradm_recovering_from_my_foolishness</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In.</string>
    <string name="get_started">Get Started.</string>
    <string name="welcome_to">Welcome to\nTRAD\'M!</string>
    <string name="connect_with">Connect with people  people from your\n community and start your trading journey.</string>
    <string name="welcome_to_trad_m">Welcome to TRAD\'M!</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="student_id">Student ID</string>
    <string name="email_addr">Email Address</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account">Create an Account.</string>
    <string name="log_in">Log In</string>
    <string name="trad_m">TRAD\'M</string>
    <string name="offer_creation">Offer Creation</string>
    <string name="item">Item</string>
    <string name="service">Service</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="price">Price</string>
    <string name="krw">KRW</string>
    <string name="picture">Picture</string>
    <string name="name_here">Enter Offer Name</string>
    <string name="upload_a_picture">Upload a Picture</string>
    <string name="item_desc">Enter item offer description.</string>
    <string name="description">Description</string>
    <string name="create_offer">Create Offer</string>
    <string name="cancel">Cancel</string>
    <string name="service_desc">Enter service description here.</string>
    <string name="title">Title</string>
    <string name="offer_search">Search for Offer</string>
    <string name="_20180744">20180744</string>
    <string name="kaist_email_2">KAIST Email</string>
    <string name="biasindi00">biasindi00</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="apply_now">Apply Now</string>
    <string name="service_details">Service Details</string>
    <string name="service_name">Service Name</string>
    <string name="description">Description</string>
    <string name="seller_information">Seller Information</string>
    <string name="item_details">Item Details</string>
    <string name="item_name">Item Name</string>
    <string name="apply">Apply</string>

</resources>
